fixed scrollbar color

--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@ img{
 }
 
 ::-webkit-scrollbar-track {
-    background: #010911;
+    background: #020e1b;
 }
 
 ::-webkit-scrollbar-thumb {
